--- a/TravelApp/TravelApp.csproj
+++ b/TravelApp/TravelApp.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="airplane.ico" />
+    <None Remove="Style\Images\back_arrow.png" />
     <None Remove="Style\Images\trip.png" />
   </ItemGroup>
 
@@ -21,6 +22,9 @@
 
   <ItemGroup>
     <Resource Include="Style\Images\airplane.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Style\Images\back_arrow.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Style\Images\trip.png" />
